# c11thrd

./: .gitignore  CMakeLists.txt  LICENCE  README  makefile
include/: mutex  spinlock.h  system_error  threads.h
src/: mutex.cpp  spinlock.c  static_assert.h  threads.c
